[package]
name = "lb-rodeo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = "0.6.10"
clap = { version = "4.1.8", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }

